[package]
name = "sandu"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3.23"

[dev-dependencies]
pretty_assertions = "1.0"
