[package]
name = "sandu"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.7", features = ["derive"] }
itertools = "0.10.1"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
termion = "1.5.6"
tui = "0.16.0"

[dev-dependencies]
pretty_assertions = "1.0"
